hotel list with api is done

--- a/RapidApiProject/Views/Default/Index.cshtml
+++ b/RapidApiProject/Views/Default/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model SearchViewModel
+﻿@model BookingSearchViewModel
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_UILayout.cshtml";
@@ -50,7 +50,6 @@
                                 <option value="3">3 Yetişkin</option>
                                 <option value="4">4 Yetişkin</option>
                                 <option value="5">5 Yetişkin</option>
-                                <option value="6">6 Yetişkin</option>
                             </select>
                         </div>
                         <div class="select-option">
