--- a/RapidApiProject/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
+++ b/RapidApiProject/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
@@ -25,15 +25,15 @@
                 </ul>
             </div>
         </div>
-        <a href="#" class="bk-btn">Şimdi Rezervasyon Yap</a>
+        <a href="#" class="bk-btn">Booking Now</a>
     </div>
     <nav class="mainmenu mobile-menu">
         <ul>
             <li class="active"><a href="./index.html">Home</a></li>
-            <li><a href="./rooms.html">Odalar</a></li>
-            <li><a href="./about-us.html">Hakkımızda</a></li>
+            <li><a href="./rooms.html">Rooms</a></li>
+            <li><a href="./about-us.html">About Us</a></li>
             <li>
-                <a href="./pages.html">Sayfalar</a>
+                <a href="./pages.html">Pages</a>
                 <ul class="dropdown">
                     <li><a href="./room-details.html">Room Details</a></li>
                     <li><a href="#">Deluxe Oda</a></li>
@@ -41,7 +41,7 @@
                     <li><a href="#">Premium Oda</a></li>
                 </ul>
             </li>
-            <li><a href="./contact.html">İletişim</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
     <div id="mobile-menu-wrap"></div>
@@ -76,7 +76,7 @@
                             <a href="#"><i class="fa fa-tripadvisor"></i></a>
                             <a href="#"><i class="fa fa-instagram"></i></a>
                         </div>
-                        <a href="#" class="bk-btn">Şimdi Rezervasyon Yap</a>
+                        <a href="#" class="bk-btn">Booking Now</a>
                         <div class="language-option">
                             <img src="/sona-master/img/flag.jpg" alt="">
                             <span>EN <i class="fa fa-angle-down"></i></span>
@@ -106,11 +106,11 @@
                     <div class="nav-menu">
                         <nav class="mainmenu">
                             <ul>
-                                <li class="active"><a href="./index.html">Anasayfa</a></li>
-                                <li><a href="./rooms.html">Odalar</a></li>
-                                <li><a href="./about-us.html">Hakkımızda</a></li>
+                                <li class="active"><a href="./index.html">Home</a></li>
+                                <li><a href="./rooms.html">Rooms</a></li>
+                                <li><a href="./about-us.html">About Us</a></li>
                                 <li>
-                                    <a href="./pages.html">Sayfalar</a>
+                                    <a href="./pages.html">Pages</a>
                                     <ul class="dropdown">
                                         <li><a href="./room-details.html">Oda Detayları</a></li>
                                         <li><a href="./blog-details.html">Blog Detayları</a></li>
@@ -118,7 +118,7 @@
                                         <li><a href="#">Premium Oda</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="./contact.html">İletişim</a></li>
+                                <li><a href="./contact.html">Contact</a></li>
                             </ul>
                         </nav>
                         <div class="nav-right search-switch">
