--- a/RapidApiProject/Views/Default/GetHotelList.cshtml
+++ b/RapidApiProject/Views/Default/GetHotelList.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ListViewModel.Hotel>
+﻿@model List<HotelListViewModel.Hotel>
 @{
     ViewData["Title"] = "HotelList";
     Layout = "~/Views/Shared/_UILayout.cshtml";
@@ -25,7 +25,7 @@
             {
                 <div class="col-lg-4 col-md-6">
                     <div class="room-item">
-                        <img src="@item.property.photoUrls[0].Replace("square60", "square480")" alt="">
+                        <img src="@item.property.photoUrls[0].Replace("square60", "square1080")" style="max-width:100%;height:auto;" alt="">
                         <div class="ri-text">
                             <h4>@item.property.name</h4>
                             <h3>@item.property.reviewCount<span>@item.property.currency</span></h3>
